src/test/resources/fail/indirect/A.scala
//acyclic
package fail.indirect

object A
class A {
  val b: B = null
}
